<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".view.DetailActivity">
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.1"
                />
                <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guide_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.9"
                />
                <ImageView
                        android:id="@+id/character_image"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/img_placeholder"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/img_description"
                />
                <TextView
                        android:id="@+id/character_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_name_placeholder"
                        android:textSize="20sp"
                        android:fontFamily="@font/mclaren"
                        app:layout_constraintTop_toBottomOf="@id/character_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />
                <TextView
                        android:id="@+id/status_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_placeholder"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@id/character_name"
                />
                <TextView
                        android:id="@+id/character_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/character_name"
                        android:fontFamily="@font/mclaren"/>
                <TextView
                        android:id="@+id/gender_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@+id/status_placeholder"
                />
                <TextView
                        android:id="@+id/character_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/character_status"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                />

                <TextView
                        android:id="@+id/species_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/species_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@+id/gender_placeholder"
                />

                <TextView
                        android:id="@+id/character_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/character_gender"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                />
                <TextView
                        android:id="@+id/origin_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@+id/species_placeholder"
                />

                <TextView
                        android:id="@+id/character_origin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/character_species"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        tools:text="EARTH (REPLACEMNET DIMENSION)"
                        android:ellipsize="end"
                        android:maxLines="1"
                        app:layout_constraintStart_toEndOf="@+id/origin_placeholder" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="1"/>

                <TextView
                        android:id="@+id/location_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@+id/origin_placeholder"
                />

                <TextView
                        android:id="@+id/character_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/location_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                />

                <TextView
                        android:id="@+id/episode_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/episode_placeholder"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="@+id/guide_start"
                        app:layout_constraintTop_toBottomOf="@+id/character_location"
                />

                <TextView
                        android:id="@+id/character_episode"
                        android:layout_width="0dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="@+id/guide_end"
                        app:layout_constraintTop_toBottomOf="@+id/episode_placeholder"
                        app:layout_constraintStart_toStartOf="@id/guide_start"
                        android:fontFamily="@font/mclaren"
                        android:textSize="18sp"
                />
                <Button
                        android:id="@+id/favorite_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/favorite"
                        android:fontFamily="@font/mclaren"
                        android:textColor="@android:color/white"
                        android:background="@android:color/holo_blue_dark"
                        android:textSize="18sp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/character_episode"/>
                <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.885"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>